--- a/build.xml
+++ b/build.xml
@@ -8,7 +8,7 @@
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
-    <path id="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath">
+    <!--<path id="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath">
         <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/annotations-api.jar"/>
         <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-ant.jar"/>
         <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-ha.jar"/>
@@ -33,7 +33,7 @@
         <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-util.jar"/>
         <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-websocket.jar"/>
         <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/websocket-api.jar"/>
-    </path>
+    </path>-->
     <path id="Web App Libraries.libraryclasspath">
         <pathelement location="WebContent/WEB-INF/lib/commons-dbcp-1.4.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/commons-pool-1.5.4.jar"/>
