--- a/build.xml
+++ b/build.xml
@@ -8,8 +8,8 @@
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
-    <!--<path id="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath">
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/annotations-api.jar"/>
+    <path id="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath"/>
+        <!--<pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/annotations-api.jar"/>
         <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-ant.jar"/>
         <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-ha.jar"/>
         <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-storeconfig.jar"/>
