--- a/build.xml
+++ b/build.xml
@@ -6,6 +6,8 @@
               as the first entry and export the buildfile again. --><project basedir="." default="build" name="MyLocationHub">
     <property environment="env"/>
     <property name="debuglevel" value="source,lines,vars"/>
+    <property name="target" value="1.7"/>
+    <property name="source" value="1.7"/>
     <path id="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath"/>
         <!--<pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/annotations-api.jar"/>
         <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-ant.jar"/>
