--- a/build.xml
+++ b/build.xml
@@ -39,6 +39,7 @@
         <pathelement location="WebContent/WEB-INF/lib/commons-pool-1.5.4.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/log4j-1.2.17.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/mysql-connector-java-5.0.6-bin.jar"/>
+    	<pathelement location="WebContent/WEB-INF/lib/servlet-api.jar"/>    	
     </path>
     <path id="EAR Libraries.libraryclasspath"/>
     <path id="MyLocationHub.classpath">
