--- a/build.xml
+++ b/build.xml
@@ -6,10 +6,10 @@
               as the first entry and export the buildfile again. --><project basedir="." default="build" name="MyLocationHub">
     <property environment="env"/>
     <property name="debuglevel" value="source,lines,vars"/>
-    <property name="target" value="1.8"/>
-    <property name="source" value="1.8"/>
-    <!--<path id="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath">
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/annotations-api.jar"/>
+    <property name="target" value="1.7"/>
+    <property name="source" value="1.7"/>
+    <path id="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath"/>
+        <!--<pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/annotations-api.jar"/>
         <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-ant.jar"/>
         <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-ha.jar"/>
         <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-storeconfig.jar"/>
@@ -39,7 +39,6 @@
         <pathelement location="WebContent/WEB-INF/lib/commons-pool-1.5.4.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/log4j-1.2.17.jar"/>
         <pathelement location="WebContent/WEB-INF/lib/mysql-connector-java-5.0.6-bin.jar"/>
-    	<pathelement location="WebContent/WEB-INF/lib/servlet-api.jar"/>    	
     </path>
     <path id="EAR Libraries.libraryclasspath"/>
     <path id="MyLocationHub.classpath">
