--- a/build.xml
+++ b/build.xml
@@ -1,94 +1,79 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!-- WARNING: Eclipse auto-generated file.
-              Any modifications will be overwritten.
-              To include a user specific buildfile here, simply create one in the same
-              directory with the processing instruction <?eclipse.ant.import?>
-              as the first entry and export the buildfile again. -->
-<project basedir="." default="build" name="MyLocationHub">
-    <property environment="env"/>
-    <property name="debuglevel" value="source,lines,vars"/>
-    <property name="target" value="1.7"/>
-    <property name="source" value="1.7"/>
-	<property name="web.dir" value="WebContent" />
-	<property name="web.classes.dir" location="${web.dir}/WEB-INF/classes" />
-	<property name="target.dir" location="target" />
-	<property name="target.temp.dir" location="target/temp" />
-	<property name="lib.dir" value="lib" />
+<?xml version="1.0" encoding="UTF-8"?> 
+ <project basedir="." default="package" name="MyLocationHub"> 
+ 	<!-- 
+ 	This script assumes: 
+ 	1) CATALINA_HOME environment variable points to tomcat's directory 
+ 	2) Following Folder Structure 
+ 	./ (project root) 
+ 	|- src/ (project.src.dir - source folder) 
+ 	|- build/  
+	|  |- classes/ (project.classes.dir) 
+ 	|- WebContent/ (project.web.dir) 
+ 	|  |- lib/  (project.lib.dir) 
+ 	|- PROJECT_NAME.war (project.war) 
+ 	3) JAVA_HOME is set and point to JDK 1.6 and above 
+ 	 
+ 	--> 
+ 	<property environment="env" /> 
+ 	<property name="TOMCAT_HOME" value="${env.CATALINA_HOME}" /> 
+ 	<property name="debuglevel" value="source,lines,vars" /> 
+ 	<property name="target" value="1.7" /> 
+ 	<property name="source" value="1.7" /> 
+ 	<property name="project.name" value="${ant.project.name}" /> 
+ 	<property name="project.web.dir" value="WebContent" /> 
+ 	<property name="project.src.dir" value="src" /> 
+ 	<property name="project.classes.dir" value="build/classes" /> 
+ 	<property name="project.lib.dir" value="${project.web.dir}/WEB-INF/lib" /> 
+ 	<property name="project.war" value="${project.name}.war" /> 
+ 	<property name="project.runtime.lib" value="${TOMCAT_HOME}/lib" /> 
+ 	<property name="project.deploy.location" value="${TOMCAT_HOME}/webapps" /> 
 
-    <path id="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath"/>
-        <!--<pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/annotations-api.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-ant.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-ha.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-storeconfig.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina-tribes.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/catalina.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/ecj-4.4.2.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/el-api.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/jasper-el.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/jasper.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/jsp-api.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/servlet-api.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-api.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-coyote.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-dbcp.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-i18n-es.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-i18n-fr.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-i18n-ja.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-jdbc.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-jni.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-util-scan.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-util.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/tomcat-websocket.jar"/>
-        <pathelement location="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/websocket-api.jar"/>
-    </path>-->
-    <path id="Web App Libraries.libraryclasspath">
-        <pathelement location="WebContent/WEB-INF/lib/commons-dbcp-1.4.jar"/>
-        <pathelement location="WebContent/WEB-INF/lib/commons-pool-1.5.4.jar"/>
-        <pathelement location="WebContent/WEB-INF/lib/log4j-1.2.17.jar"/>
-        <pathelement location="WebContent/WEB-INF/lib/mysql-connector-java-5.0.6-bin.jar"/>
-    	<pathelement location="WebContent/WEB-INF/lib/servlet-api.jar"/>    	
-    </path>
-    <path id="EAR Libraries.libraryclasspath"/>
-    <path id="MyLocationHub.classpath">
-        <pathelement location="build/classes"/>
-        <path refid="Apache Tomcat v8.0 [Apache Tomcat v8.0].libraryclasspath"/>
-        <path refid="Web App Libraries.libraryclasspath"/>
-        <path refid="EAR Libraries.libraryclasspath"/>
-    </path>
-    <target name="init">
-        <mkdir dir="build/classes"/>
-        <copy includeemptydirs="false" todir="build/classes">
-            <fileset dir="src">
-                <exclude name="**/*.java"/>
-            </fileset>
-        </copy>
-    </target>
-    <target name="clean">
-        <delete dir="build/classes"/>
-    </target>
-    <target depends="clean" name="cleanall"/>
-    <target depends="build-subprojects,build-project" name="buildproject"/>
-    <target name="build-subprojects"/>
-    <target depends="init" name="build-project">
-        <echo message="${ant.project.name}: ${ant.file}"/>
-        <javac debug="true" debuglevel="${debuglevel}" destdir="build/classes" includeantruntime="false" source="${source}" target="${target}">
-            <src path="src"/>
-            <classpath refid="MyLocationHub.classpath"/>
-        </javac>
-    	<echo message="build sucess"/>
-    </target>             	
-	
-		<target name="build" depends="buildproject" 
-	                description="create a war file">
-			<echo message="MyLocationHub.war started"/>
-			<war destfile="${target.dir}/MyLocationHub.war" webxml="${web.dir}/WEB-INF/web.xml">
-				
-				<webinf dir="${web.dir}/WEB-INF" />
-				<lib dir="${lib.dir}" />
-				<zipfileset dir="${web.dir}/resources" prefix="resources" />			
-			</war>
-			<echo message="MyLocationHub.war generated"/>
-		</target>             	
-              	
-   <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
-</project>
+ 
+ 
+ 
+ 	<path id="classpath.runtime"> 
+ 		<fileset dir="${project.runtime.lib}" includes="*.jar" /> 
+ 	</path> 
+ 	<path id="classpath.lib"> 
+ 		<fileset dir="${project.lib.dir}" includes="*.jar" /> 
+ 	</path> 
+ 	<path id="project.classpath"> 
+ 		<pathelement location="${project.classes.dir}" /> 
+ 		<path refid="classpath.runtime" /> 
+ 		<path refid="classoath.lib" /> 
+ 	</path> 
+ 	<target name="init"> 
+ 		<mkdir dir="${project.classes.dir}" /> 
+ 		<copy includeemptydirs="false" todir="${project.classes.dir}"> 
+ 			<fileset dir="src"> 
+ 				<exclude name="**/*.java" /> 
+ 			</fileset> 
+ 		</copy> 
+ 	</target> 
+ 	<target name="clean"> 
+ 		<delete dir="${project.classes.dir}" /> 
+ 		<delete dir="${project.war}" /> 
+ 	</target> 
+ 
+ 
+ 	<target depends="init" name="build" description="Compiling all java files in ${project.src.dir}"> 
+ 		<echo message="${project.name}: ${ant.file}" /> 
+ 		<javac debug="true" debuglevel="${debuglevel}" destdir="${project.classes.dir}" includeantruntime="false" source="${source}" target="${target}"> 
+ 			<src path="src" /> 
+ 			<classpath refid="project.classpath" /> 
+ 		</javac> 
+ 
+ 	</target> 
+ 	<target depends="build" name="package" description="Packagign all files into ${project.war}"> 
+ 		<war destfile="${project.war}" index="true" needxmlfile="fasle"> 
+ 			<classes dir="${project.classes.dir}" /> 
+ 			<lib dir="${project.lib.dir}" /> 
+ 			<fileset dir="${project.web.dir}"> 
+ 				<include name="**/*.*" /> 
+ 			</fileset> 
+ 		</war> 
+ 	</target> 
+ 	<target depends="package" name="deploy" description="Copying ${project.war} to ${project.deploy.location}"> 
+ 		<copy file="${project.war}" todir="${project.deploy.location}" /> 
+ 	</target>
+</project> 
