--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
 language: java
 script: ant package
+deploy:
+   edge: true
+   provider: cloudfoundry
+   username: deenathayalan.pandiraj@verizon.com
+   password: Verizon1
+   api: https://api.run.pivotal.io
+   organization: AcssCognizon
+   space: development
