--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,7 @@
  	<property name="project.src.dir" value="src" /> 
  	<property name="project.classes.dir" value="build/classes" /> 
  	<property name="project.lib.dir" value="${project.web.dir}/WEB-INF/lib" /> 
- 	<property name="project.war" value="${project.name}.war" /> 
+ 	<property name="project.war" value="build/${project.name}.war" /> 
  	<!--<property name="project.runtime.lib" value="${TOMCAT_HOME}/lib" /> 
  	<property name="project.deploy.location" value="${TOMCAT_HOME}/webapps" />--> 
 
