--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,7 @@
  	<property name="project.src.dir" value="src" /> 
  	<property name="project.classes.dir" value="build/classes" /> 
  	<property name="project.lib.dir" value="${project.web.dir}/WEB-INF/lib" /> 
- 	<property name="project.war" value="build/${project.name}.war" /> 
+ 	<property name="project.war" value="${project.name}.war" /> 
  	<!--<property name="project.runtime.lib" value="${TOMCAT_HOME}/lib" /> 
  	<property name="project.deploy.location" value="${TOMCAT_HOME}/webapps" />--> 
 
@@ -65,7 +65,7 @@
  
  	</target> 
  	<target depends="build" name="package" description="Packagign all files into ${project.war}"> 
- 		<war destfile="${project.war}" index="true" needxmlfile="fasle"> 
+ 		<war destfile="build/MyLocationHub.war" index="true" needxmlfile="fasle"> 
  			<classes dir="${project.classes.dir}" /> 
  			<lib dir="${project.lib.dir}" /> 
  			<fileset dir="${project.web.dir}"> 
